added flexbox styling

--- a/index.html
+++ b/index.html
@@ -93,19 +93,19 @@
         </fieldset>
         <fieldset id="newsletter">
             <legend>Newsletter</legend>
-            <label>Select the newsletters you would like to receive</label><br>
-            <input type="checkbox" id="html_news" value="newsletter_html_news" name="user_newsletter">
-            <label for="html_news">HTML News</label><br>
-            <input type="checkbox" id="css_news" value="newsletter_css_news" name="user_newsletter">
-            <label for="css_news">CSS News</label><br>
-            <input type="checkbox" id="js_news" value="newsletter_js_news" name="user_newsletter">
-            <label for="js_news">Javascript News</label><br><br>
+            <label>Select the newsletters you would like to receive</label>
+            <span class="click"><input type="checkbox" id="html_news" value="newsletter_html_news" name="user_newsletter">
+            <label for="html_news" class="box">HTML News</label></span>
+            <span class="click"><input type="checkbox" id="css_news" value="newsletter_css_news" name="user_newsletter">
+            <label for="css_news" class="box">CSS News</label></span>
+            <span class="click"><input type="checkbox" id="js_news" value="newsletter_js_news" name="user_newsletter">
+            <label for="js_news" class="box">Javascript News</label></span>
 
             <label>Newsletter format</label><br>
-            <input type="radio" id="hypertext" value="hypertext" name="user_format">
-            <label for="hypertext">HTML</label><br>
-            <input type="radio" id="plain_text" value="plain_text" name="user_format">
-            <label for="plain_text">Plain text</label><br><br>
+            <span class="click"><input type="radio" id="hypertext" value="hypertext" name="user_format">
+            <label for="hypertext" class="box">HTML</label></span>
+            <span class="click"><input type="radio" id="plain_text" value="plain_text" name="user_format">
+            <label for="plain_text" class="box">Plain text</label></span>
             
             <label for="topics">Other topics you'd like to hear about</label>
             <textarea id="topics" name="user_topics" placeholder="Ex: JQuery, React Native, SolidWorks... "></textarea>
